--- a/index.html
+++ b/index.html
@@ -46,83 +46,86 @@
   <div id="cesiumContainer" class="fullSize"></div>
 
   <div id="toolbar">
-    <a href="http://fasiha.github.io/texshade/">Help</a>・
-    <a href="https://cesiumjs.org/">Cesium.js</a>・
-    <a href="http://textureshading.com/Home.html">Texture shading</a>・
-    <a href="http://www.cgiar-csi.org/data/srtm-90m-digital-elevation-database-v4-1">CGIAR-SRTM</a>
-    <table>
-      <tbody>
-        <tr>
-          <td>Base Brightness</td>
-          <td>
-            <input type="range" min="0" max="3" step="0.02" data-bind="value: brightness, valueUpdate: 'input'">
-            <input type="text" size="5" data-bind="value: brightness">
-          </td>
-        </tr>
-        <tr>
-          <td>Base Contrast</td>
-          <td>
-            <input type="range" min="0" max="3" step="0.02" data-bind="value: contrast, valueUpdate: 'input'">
-            <input type="text" size="5" data-bind="value: contrast">
-          </td>
-        </tr>
-        <tr>
-          <td>Base Hue</td>
-          <td>
-            <input type="range" min="0" max="3" step="0.02" data-bind="value: hue, valueUpdate: 'input'">
-            <input type="text" size="5" data-bind="value: hue">
-          </td>
-        </tr>
-        <tr>
-          <td>Base Saturation</td>
-          <td>
-            <input type="range" min="0" max="3" step="0.02" data-bind="value: saturation, valueUpdate: 'input'">
-            <input type="text" size="5" data-bind="value: saturation">
-          </td>
-        </tr>
-        <tr>
-          <td>Base Gamma</td>
-          <td>
-            <input type="range" min="0" max="3" step="0.02" data-bind="value: gamma, valueUpdate: 'input'">
-            <input type="text" size="5" data-bind="value: gamma">
-          </td>
-        </tr>
+    <details open>
+      <summary>Controls</summary>
+      <a href="http://fasiha.github.io/texshade/">Help</a>・
+      <a href="https://cesiumjs.org/">Cesium.js</a>・
+      <a href="http://textureshading.com/Home.html">Texture shading</a>・
+      <a href="http://www.cgiar-csi.org/data/srtm-90m-digital-elevation-database-v4-1">CGIAR-SRTM</a>
+      <table>
+        <tbody>
+          <tr>
+            <td>Base Brightness</td>
+            <td>
+              <input type="range" min="0" max="3" step="0.02" data-bind="value: brightness, valueUpdate: 'input'">
+              <input type="text" size="5" data-bind="value: brightness">
+            </td>
+          </tr>
+          <tr>
+            <td>Base Contrast</td>
+            <td>
+              <input type="range" min="0" max="3" step="0.02" data-bind="value: contrast, valueUpdate: 'input'">
+              <input type="text" size="5" data-bind="value: contrast">
+            </td>
+          </tr>
+          <tr>
+            <td>Base Hue</td>
+            <td>
+              <input type="range" min="0" max="3" step="0.02" data-bind="value: hue, valueUpdate: 'input'">
+              <input type="text" size="5" data-bind="value: hue">
+            </td>
+          </tr>
+          <tr>
+            <td>Base Saturation</td>
+            <td>
+              <input type="range" min="0" max="3" step="0.02" data-bind="value: saturation, valueUpdate: 'input'">
+              <input type="text" size="5" data-bind="value: saturation">
+            </td>
+          </tr>
+          <tr>
+            <td>Base Gamma</td>
+            <td>
+              <input type="range" min="0" max="3" step="0.02" data-bind="value: gamma, valueUpdate: 'input'">
+              <input type="text" size="5" data-bind="value: gamma">
+            </td>
+          </tr>
 
-        <tr>
-          <td>Tex Brightness</td>
-          <td>
-            <input type="range" min="0" max="3" step="0.02" data-bind="value: texbrightness, valueUpdate: 'input'">
-            <input type="text" size="5" data-bind="value: texbrightness">
-          </td>
-        </tr>
-        <tr>
-          <td>Tex Contrast</td>
-          <td>
-            <input type="range" min="0" max="3" step="0.02" data-bind="value: texcontrast, valueUpdate: 'input'">
-            <input type="text" size="5" data-bind="value: texcontrast">
-          </td>
-        </tr>
-        <tr>
-          <td>Tex Gamma</td>
-          <td>
-            <input type="range" min="0" max="3" step="0.02" data-bind="value: texgamma, valueUpdate: 'input'">
-            <input type="text" size="5" data-bind="value: texgamma">
-          </td>
-        </tr>
-        <tr>
-          <td>Tex Alpha</td>
-          <td>
-            <input type="range" min="0" max="1.1" step="0.02" data-bind="value: texalpha, valueUpdate: 'input'">
-            <input type="text" size="5" data-bind="value: texalpha">
-          </td>
-        </tr>
-      </tbody>
-    </table>
-    <p>
-      Camera:
-      <span data-bind="text: displayCameraLatLon(cameraLat, cameraLon)">Lat-lon</span>. Height:
-      <span data-bind="text: displayCameraHeight(cameraHeight)">.</p>
-    <button id="permalink-button" data-bind="click: serializeView">Permalink</button>
+          <tr>
+            <td>Tex Brightness</td>
+            <td>
+              <input type="range" min="0" max="3" step="0.02" data-bind="value: texbrightness, valueUpdate: 'input'">
+              <input type="text" size="5" data-bind="value: texbrightness">
+            </td>
+          </tr>
+          <tr>
+            <td>Tex Contrast</td>
+            <td>
+              <input type="range" min="0" max="3" step="0.02" data-bind="value: texcontrast, valueUpdate: 'input'">
+              <input type="text" size="5" data-bind="value: texcontrast">
+            </td>
+          </tr>
+          <tr>
+            <td>Tex Gamma</td>
+            <td>
+              <input type="range" min="0" max="3" step="0.02" data-bind="value: texgamma, valueUpdate: 'input'">
+              <input type="text" size="5" data-bind="value: texgamma">
+            </td>
+          </tr>
+          <tr>
+            <td>Tex Alpha</td>
+            <td>
+              <input type="range" min="0" max="1.1" step="0.02" data-bind="value: texalpha, valueUpdate: 'input'">
+              <input type="text" size="5" data-bind="value: texalpha">
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <p>
+        Camera:
+        <span data-bind="text: displayCameraLatLon(cameraLat, cameraLon)">Lat-lon</span>. Height:
+        <span data-bind="text: displayCameraHeight(cameraHeight)">.</p>
+          <button id="permalink-button" data-bind="click: serializeView">Permalink</button>
+    </details>
   </div>
 
   <script src="Build/Cesium/Cesium.js"></script>
